@@ -1,5 +1,17 @@
 2011-01-17  Ingo Weinzierl <ingo@intevation.de>
 
+	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
+	  Beim Erstellen der kasse.txt wird nun das Kassenzeichen des Betreibers
+	  geschrieben. Außerdem wird darauf geachtet, dass die letzte Zahlenfolge in
+	  der Zeile die richtige Länge von 19 Ziffern besitzt. Andernfalls wird
+	  diese in der Mitte mit Nullen aufgefüllt.
+
+	* src/de/bielefeld/umweltamt/aui/utils/DateUtils.java: Eine neue Konstante
+	  hinzugefügt, welche das Format beschreibt, wie es in kasse.txt gebraucht
+	  wird.
+
+2011-01-17  Ingo Weinzierl <ingo@intevation.de>
+
 	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java: In
 	  der Probenahmedetail-Oberfläche wird nun im Feld `Rechnungsdatum` das
 	  Datum angezeigt, an dem der Gebührenbescheid gestellt wurde.
